--- a/css/style.css
+++ b/css/style.css
@@ -763,6 +763,7 @@ Layout
 }
 .s-service .l-L08, .s-service .l-L11, .s-service .l-L14 {
   position: relative;
+  z-index: 0;
 }
 .s-service .l-L08::before, .s-service .l-L11::before, .s-service .l-L14::before {
   content: "";
@@ -772,6 +773,7 @@ Layout
   position: absolute;
   right: 50px;
   bottom: 0;
+  z-index: -2;
 }
 .s-service .l-L08::before {
   content: "01";
@@ -2476,37 +2478,42 @@ Block
   service
 ----------------------------------------------- */
 .b-serviceContents__advantage {
-  padding: 32px 40px;
+  padding: 32px 24px;
   position: relative;
 }
 .b-serviceContents__advantage .b-serviceContents__boxTitle {
-  padding-bottom: 16px;
+  padding-left: 64px;
+  padding-bottom: 24px;
 }
 .b-serviceContents__advantage .b-serviceContents__boxIcon {
   position: absolute;
-  bottom: 32px;
-  left: 40px;
-  width: 110px;
+  top: 20px;
+  left: 20px;
+  width: 55px;
 }
 .b-serviceContents__advantageResult {
   padding: 32px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 0 24px;
+  text-align: center;
+  gap: 24px 0;
+}
+.b-serviceContents__advantageResult .b-serviceContents__boxIcon {
+  width: 80px;
 }
 .b-serviceContents__advantageWrapper {
-  padding-left: 144px;
+  padding-left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2517,30 +2524,27 @@ Block
   gap: 12px 0;
 }
 .b-serviceContents__support {
-  padding: 32px 32px 32px 64px;
+  padding: 32px 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  gap: 0 64px;
-}
-.b-serviceContents__support .b-serviceContents__supportWrapper {
-  width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .b-serviceContents__support .b-serviceContents__supportWrapper .b-serviceContents__boxIcon {
   padding-bottom: 24px;
   margin: 0 auto;
 }
 .b-serviceContents__support .b-serviceContents__boxIcon {
-  width: 50%;
+  width: 70%;
 }
 .b-serviceContents__support .b-serviceContents__boxTitle {
   padding-bottom: 24px;
 }
 .b-serviceContents__lowPrice {
-  padding: 32px;
+  padding: 32px 16px;
 }
 .b-serviceContents__lowPrice .b-serviceContents__lowPriceWrapper {
   padding-bottom: 48px;
@@ -2578,7 +2582,7 @@ Block
   padding-bottom: 32px;
 }
 .b-serviceContents__lowPrice .b-serviceContents__boxIcon.communication {
-  width: 385px;
+  width: 90%;
   margin: 0 auto;
   padding-bottom: 48px;
 }
@@ -2606,6 +2610,107 @@ Block
   padding-left: 24px;
 }
 
+@media screen and (min-width: 1000px) {
+  .b-serviceContents__advantage {
+    padding: 32px 40px;
+  }
+  .b-serviceContents__advantage .b-serviceContents__boxTitle {
+    padding-left: 0;
+    padding-bottom: 16px;
+  }
+  .b-serviceContents__advantage .b-serviceContents__boxIcon {
+    top: auto;
+    bottom: 32px;
+    left: 40px;
+    width: 110px;
+  }
+  .b-serviceContents__advantageResult {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    gap: 0 24px;
+  }
+  .b-serviceContents__advantageResult .b-serviceContents__boxIcon {
+    width: 110px;
+  }
+  .b-serviceContents__advantageWrapper {
+    padding-left: 144px;
+  }
+  .b-serviceContents__support {
+    padding: 32px 32px 32px 64px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 0 64px;
+  }
+  .b-serviceContents__support .b-serviceContents__supportWrapper {
+    width: 50%;
+  }
+  .b-serviceContents__support .b-serviceContents__supportWrapper .b-serviceContents__boxIcon {
+    padding-bottom: 24px;
+  }
+  .b-serviceContents__support .b-serviceContents__boxIcon, .b-serviceContents__support .b-serviceContents__boxImage {
+    width: 50%;
+  }
+  .b-serviceContents__support .b-serviceContents__boxTitle {
+    padding-bottom: 24px;
+  }
+  .b-serviceContents__lowPrice {
+    padding: 32px;
+  }
+  .b-serviceContents__lowPrice .b-serviceContents__lowPriceWrapper {
+    padding-bottom: 48px;
+    gap: 0 64px;
+  }
+  .b-serviceContents__lowPrice .b-serviceContents__lowPriceWrapper .b-serviceContents__boxIcon:first-child {
+    width: 55%;
+  }
+  .b-serviceContents__lowPrice .b-serviceContents__lowPriceWrapper .b-serviceContents__boxIcon:first-child::before {
+    content: "";
+    top: 0;
+    right: -18%;
+    bottom: 0;
+    margin: auto 0;
+    width: 32px;
+    height: 32px;
+    -webkit-transform: rotate(52deg);
+            transform: rotate(52deg);
+  }
+  .b-serviceContents__lowPrice .b-serviceContents__boxTitle {
+    padding-bottom: 32px;
+  }
+  .b-serviceContents__lowPrice .b-serviceContents__boxIcon.communication {
+    width: 385px;
+    padding-bottom: 48px;
+  }
+  .b-serviceContents__boxList.icon {
+    position: relative;
+    padding-left: 24px;
+  }
+  .b-serviceContents__boxList.icon::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 4px;
+    margin: auto 0;
+    width: 14px;
+    height: 14px;
+    background-image: url(../../img/hero_04.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    -webkit-transform: rotate(50deg);
+            transform: rotate(50deg);
+  }
+  .b-serviceContents__boxList.icon span {
+    padding-left: 24px;
+  }
+}
 /*
   difference
 ----------------------------------------------- */
