--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -328,6 +328,7 @@
   & .l-L11,
   & .l-L14 {
     position: relative;
+    z-index: 0;
     &::before {
       content: "";
       @include font-size(220);
@@ -336,6 +337,7 @@
       position: absolute;
       right: 50px;
       bottom: 0;
+      z-index: -2;
     }
   }
   & .l-L08 {
