--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -2,6 +2,26 @@
 /*
   l-main
 ----------------------------------------------- */
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+.fadeUp {
+  animation-name: fadeUpAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 /*
   common
 ----------------------------------------------- */
