--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -101,6 +101,7 @@
         flex-wrap: nowrap;
         align-items: center;
         justify-content: flex-end;
+        height: auto;
         gap: 0 24px;
         & .b-nav__item {
           & a {
