--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -409,7 +409,7 @@
 .m-creatorCranks {
   & .b-creatorContents__link {
     position: relative;
-    margin: 0 32px 0 24px;
+    margin: 0 24px 0 18px;
     border-bottom: 1px solid $whiteColor;
 
     &::before,
@@ -421,19 +421,19 @@
       margin: auto 0;
     }
     &::before {
-      left: -24px;
-      width: 16px;
-      height: 16px;
+      left: -18px;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
       background-color: $pinkColor;
     }
     &::after {
-      right: -32px;
+      right: -24px;
       background-image: url(../../img/mdi_external-link.png);
       background-repeat: no-repeat;
       background-size: contain;
-      width: 24px;
-      height: 24px;
+      width: 16px;
+      height: 16px;
     }
   }
 }
@@ -456,18 +456,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 32px;
+  padding: 16px;
   &__boxLogo {
-    width: 240px;
-    padding-bottom: 24px;
+    width: 110px;
+    padding-bottom: 16px;
   }
   &__cardBox {
     display: flex;
     justify-content: space-between;
-    gap: 0 32px;
+    gap: 0 16px;
   }
   &__cardItem {
-    padding: 24px;
+    padding: 16px 8px;
     border-radius: 8px;
     &.blue {
       background-color: $SLashCardColor_01;
@@ -480,7 +480,7 @@
 
   &__boxTitle {
     position: relative;
-    padding: 104px 0 8px 0;
+    padding: 60px 0 8px 0;
     &::before {
       content: "";
       position: absolute;
@@ -488,8 +488,8 @@
       left: 0;
       right: 0;
       margin: 0 auto;
-      width: 96px;
-      height: 104px;
+      width: 56px;
+      height: 60px;
       background-repeat: no-repeat;
       background-size: contain;
     }
@@ -524,21 +524,76 @@
   flex-direction: column;
   align-items: center;
   color: $textColor;
-  padding: 32px 64px;
+  padding: 16px 32px;
   &__boxLogo {
-    width: 318px;
-    padding-bottom: 24px;
+    width: 182px;
+    padding-bottom: 16px;
   }
   &__cardBox {
     display: flex;
     justify-content: space-between;
-    gap: 0 64px;
+    gap: 0 32px;
   }
   &__boxImage {
     padding-bottom: 8px;
   }
   &__boxName--jp {
     padding-bottom: 8px;
+  }
+}
+
+@include mq(l) {
+  .m-creatorSlash,
+  .m-creatorCranks {
+    & .b-creatorContents__link {
+      margin: 0 32px 0 24px;
+
+      &::before {
+        left: -24px;
+        width: 16px;
+        height: 16px;
+      }
+      &::after {
+        right: -32px;
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
+
+  .b-creatorSLash {
+    padding: 32px;
+    &__boxLogo {
+      width: 240px;
+      padding-bottom: 24px;
+    }
+    &__cardBox {
+      gap: 0 32px;
+    }
+    &__cardItem {
+      padding: 24px;
+      border-radius: 8px;
+    }
+
+    &__boxTitle {
+      position: relative;
+      padding: 104px 0 8px 0;
+      &::before {
+        width: 96px;
+        height: 104px;
+      }
+    }
+  }
+
+  .b-creatorCranks {
+    padding: 32px 64px;
+    &__boxLogo {
+      width: 318px;
+      padding-bottom: 24px;
+    }
+    &__cardBox {
+      gap: 0 64px;
+    }
   }
 }
 /*
