--- a/scss/04_blocks/_b-animation.scss
+++ b/scss/04_blocks/_b-animation.scss
@@ -274,3 +274,62 @@ b-animation
     }
   }
 }
+
+/*
+  background
+----------------------------------------------- */
+@keyframes backgroundAnime01 {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-90%, 20%);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes backgroundAnime02 {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes backgroundAnime03 {
+  from {
+    transform: rotate(30deg);
+  }
+  to {
+    transform: rotate(390deg);
+  }
+}
+@keyframes backgroundAnime04 {
+  from {
+    transform: rotate(60deg);
+  }
+  to {
+    transform: rotate(420deg);
+  }
+}
+
+.s-about .l-L06::before {
+  animation: backgroundAnime01 240s linear infinite;
+}
+.s-service .l-L07::before,
+.s-reason .l-L07::before,
+.s-flow .l-L01::before,
+.s-faq .l-L01::after {
+  animation: backgroundAnime02 420s linear infinite;
+}
+
+.s-service .l-L10::before,
+.s-faq .l-L01::before {
+  animation: backgroundAnime03 420s linear infinite;
+}
+
+.s-service .l-L13::before {
+  animation: backgroundAnime04 420s linear infinite;
+}
